added framework comments

--- a/index.html
+++ b/index.html
@@ -9,5 +9,26 @@
   </head>
   <body>
 
+<!--THIS IS THE HEADER SECTION-->
+
+
+
+<!--THIS IS THE ABOUT SECTION-->
+
+
+
+<!--THIS IS THE WORK SECTION-->
+
+
+
+<!--THIS IS THE CONTACT SECTION-->
+
+
+
+<!--THIS IS THE FOOTER SECTION-->
+
+
+
+
   </body>
 </html>
