added html framework

--- a/index.html
+++ b/index.html
@@ -11,24 +11,80 @@
 
 <!--THIS IS THE HEADER SECTION-->
 
-
+    <header>
+      <div class="full-width">
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#work">R&ampD</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="full-width">
+        <img src="img/dmi-logo2.png" alt="DMI Logo"/>
+      </div>
+    </header>
 
 <!--THIS IS THE ABOUT SECTION-->
 
+    <main>
+      <div class="full-width">
+        <h1>What we do</h1>
+        <p>Dark Matter Innovations conducts research and development with the goal of creating solutions ready for transition to market.</p>
+      </div>
 
 
 <!--THIS IS THE WORK SECTION-->
 
-
+      <div class="full-width">
+        <h1>Research &amp Development Areas</h1>
+        <div class="fifth-width">
+          <img src="" alt="Machine Nut Icon"/>
+          <h2>Human Machine Interfacing</h2>
+        </div>
+        <div class="fifth-width">
+          <img src="" alt="Headset Icon"/>
+          <h2>AR&sol;VR</h2>
+        </div>
+        <div class="fifth-width">
+          <img src="" alt="Robot Icon"/>
+          <h2>Robotics</h2>
+        </div>
+        <div class="fifth-width">
+          <img src="" alt="Car Icon"/>
+          <h2>Transportation</h2>
+        </div>
+        <div class="fifth-width">
+          <img src="" alt="Battery Icon"/>
+          <h2>Energy Storage</h2>
+        </div>
+      </div>
 
 <!--THIS IS THE CONTACT SECTION-->
 
+      <div class="full-width">
+        <div class="half-width">
+          <h1>Team</h1>
+          <p>Jeremy Milliner</p>
+          <p>Co-Founder, President, CTO</p>
+        </div>
+        <div class="half-width">
+          <h1>Contact</h1>
+          <p>Dark Matter Innovations</p>
+          <p>5652 Hwy 36 W, Suite 97</p>
+          <p>Danville, AL 35619-0097</p>
+          <p>937-831-0832</p>
+        </div>
+      </div>
 
+    </main>
 
 <!--THIS IS THE FOOTER SECTION-->
 
-
-
-
+    <footer>
+      <p>&copy; Kaylen Milliner Development &verbar; 2019</p>
+    </footer>
+  
   </body>
 </html>
